@@ -23,6 +23,10 @@
 #include <config.h>
 #endif
 
+#ifndef GETTEXT_PACKAGE
+#define GETTEXT_PACKAGE "pcmanx"
+#endif
+
 #include <gtk/gtk.h>
 #include <gdk/gdk.h>
 
@@ -31,8 +35,8 @@
 
 int main(int argc, char *argv[])
 {
-	bind_textdomain_codeset("pcmanx", "UTF-8");
-	textdomain("pcmanx");
+	bind_textdomain_codeset(GETTEXT_PACKAGE, "UTF-8");
+	textdomain(GETTEXT_PACKAGE);
 
 	if (!g_thread_supported ())
 		g_thread_init (NULL);
